@@ -2,8 +2,9 @@
 
 obj-$(CONFIG_NTFS_FS) += ntfs.o
 
-ntfs-objs := aops.o attrib.o compress.o debug.o dir.o file.o inode.o mft.o \
-	     mst.o namei.o super.o sysctl.o unistr.o upcase.o
+ntfs-objs := aops.o attrib.o collate.o compress.o debug.o dir.o file.o \
+	     inode.o mft.o mst.o namei.o super.o sysctl.o unistr.o \
+	     upcase.o
 
 EXTRA_CFLAGS = -DNTFS_VERSION=\"2.1.15-WIP\"
 
